# pvewatch

./: .env.example  .gitignore  .gitlab-ci.yml  DECISIONS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
src/pvewatch/: alerts.py  config.py  database.py  digest.py  main.py  poller.py  proxmox.py  storage.py  web.py
src/pvewatch/migrations/: 001_initial.sql  002_storage_node.sql  003_vm_states_node.sql  004_bigint_bytes.sql
src/pvewatch/templates/: digest.html
tests/: test_alerts.py  test_digest_helpers.py  test_heartbeat.py  test_poller_helpers.py  test_proxmox_batch.py  test_proxmox_parser.py  test_web_auth.py  test_web_dispatch.py  test_web_helpers.py
